fix: rem -> em to get rid of scrollbar on navbar

--- a/client/src/app/shared/header/header.component.scss
+++ b/client/src/app/shared/header/header.component.scss
@@ -35,10 +35,10 @@ header {
 }
 
 .logo {
-  height: 2.3rem;
+  height: 1.4em;
 
   svg {
-    height: 2.3rem;
+    height: 1.4em;
   }
 }
 
